# brutus

./: Cargo.toml
files/: raw_request.txt  raw_request_testapi.txt  wordlist.txt
src/: main.rs
