[package]
name = "brutus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.8.0"
clap = { version = "4.2.5", features = ["derive"] }
reqwest = "0.11.17"
tokio = { version = "1.28.0", features = ["full"] }
